@@ -1,6 +1,7 @@
 Revision history for DBIx::Class
         - Possible to set locale in IC::DateTime extra => {} config
-
+        - Calling the accessor of a belongs_to when the foreign_key
+          was NULL and the row was not stored would unexpectedly fail (groditi)
 0.08099_06 2009-01-23 07:30:00 (UTC)
         - Allow a scalarref to be supplied to the 'from' resultset attribute
         - Classes submitted as result_class for a resultsource are now
